--- a/moviedb/templates/series_details.html
+++ b/moviedb/templates/series_details.html
@@ -352,7 +352,7 @@ header {
                 <p><strong>First Air Date:</strong> {{ serie.first_air_date }}</p>
                 <p><strong>Rating:</strong> {{ serie.vote_average }} / 10</p>
                 <p><strong>Genres:</strong>
-                {% for genre in genres %}
+                {% for genre in serie.genres.all %}
                     {{ genre }}{% if not forloop.last %}, {% endif %}
                 {% endfor %}
                 </p>
