--- a/moviedb/templates/series_details.html
+++ b/moviedb/templates/series_details.html
@@ -352,7 +352,7 @@ header {
                 <p><strong>First Air Date:</strong> {{ serie.first_air_date }}</p>
                 <p><strong>Rating:</strong> {{ serie.vote_average }} / 10</p>
                 <p><strong>Genres:</strong>
-                {% for genre in serie.genres.all %}
+                {% for genre in genres %}
                     {{ genre }}{% if not forloop.last %}, {% endif %}
                 {% endfor %}
                 </p>
@@ -415,5 +415,6 @@ header {
             alert('A new window has opened with the movie. To download, right-click on the video player and select "Save video as" or use a video downloader extension in your browser.');
         });
     </script>
+    
 </body>
 </html>
