--- a/moviedb/templates/series_details.html
+++ b/moviedb/templates/series_details.html
@@ -341,55 +341,59 @@ header {
         </div>
     </header>
     <div class="container">
-        <div class="movie-details-container">
-            <div class="movie-poster">
-                <img src="https://image.tmdb.org/t/p/w500{{ serie.poster_path }}" alt="{{ serie.name }}">
+        {% if error_message %}
+            <div class="alert alert-danger" role="alert">
+                {{ error_message }}
             </div>
-            <div class="movie-details-content">
-                <h2>{{ serie.name }}</h2>
-                <p><strong>{{ serie.tagline }}</strong></p>
-                <p>{{ serie.overview }}</p>
-                <p><strong>First Air Date:</strong> {{ serie.first_air_date }}</p>
-                <p><strong>Rating:</strong> {{ serie.vote_average }} / 10</p>
-                <p><strong>Genres:</strong>
-                {% for genre in genres %}
-                    {{ genre }}{% if not forloop.last %}, {% endif %}
-                {% endfor %}
-                </p>
-                <p><strong>Number of Seasons:</strong> {{ serie.number_of_seasons }}</p>
-                <p><strong>Number of Episodes:</strong> {{ serie.number_of_episodes }}</p>
-                <p><strong>Status:</strong> {{ serie.status }}</p>
-                {% if serie.episode_run_time %}
-                    <p><strong>Episode Run Time:</strong> {{ serie.episode_run_time.0 }} minutes</p>
-                {% endif %}
-                <a href="#" class="watch-button" id="watchButton">Watch Now</a>
-            </div>
-        </div>
-        
-        <!-- Seasons and Episodes -->
-        <div class="seasons-container">
-            {% for season_data in seasons %}
-                <div class="season">
-                    <h3 class="season-title">{{ season_data.season.name }}</h3>
-                    <div class="episodes-list">
-                        {% for episode in season_data.episodes %}
-                            <div class="episode">
-                                <h4 class="episode-title">{{ episode.name }}</h4>
-                                <p class="episode-info">Episode {{ episode.episode_number }}</p>
-                                <p class="episode-info">Air Date: {{ episode.air_date }}</p>
-                                <p class="episode-info">Rating: {{ episode.vote_average }} / 10</p>
-                            </div>
-                        {% endfor %}
-                    </div>
+        {% else %}
+            <div class="movie-details-container">
+                <div class="movie-poster">
+                    <img src="{{ serie.poster_path }}" alt="{{ serie.name }}">
                 </div>
-            {% endfor %}
-        </div>
-        
-        <!-- Embed Series -->
-        {% if serie.id %}
-            <div style="margin-bottom: 40px;">
-                <iframe src="https://multiembed.mov/?video_id={{ serie.id }}&tmdb=1&tv=1" width="100%" height="500" frameborder="0" allowfullscreen></iframe>
+                <div class="movie-details-content">
+                    <h2>{{ serie.name }}</h2>
+                    <p><strong>{{ serie.tagline }}</strong></p>
+                    <p>{{ serie.overview }}</p>
+                    <p><strong>First Air Date:</strong> {{ serie.first_air_date }}</p>
+                    <p><strong>Rating:</strong> {{ serie.vote_average }} / 10</p>
+                    <p><strong>Genres:</strong>
+                    {% for genre in serie.genres %}
+                        {{ genre }}{% if not forloop.last %}, {% endif %}
+                    {% endfor %}
+                    </p>
+                    <p><strong>Status:</strong> {{ serie.status }}</p>
+                    {% if serie.episode_run_time %}
+                        <p><strong>Episode Run Time:</strong> {{ serie.episode_run_time.0 }} minutes</p>
+                    {% endif %}
+                    <a href="#" class="watch-button" id="watchButton">Watch Now</a>
+                </div>
             </div>
+            
+            <!-- Seasons and Episodes -->
+            <div class="seasons-container">
+                {% for season_data in seasons %}
+                    <div class="season">
+                        <h3 class="season-title">{{ season_data.season.name }}</h3>
+                        <div class="episodes-list">
+                            {% for episode in season_data.episodes %}
+                                <div class="episode">
+                                    <h4 class="episode-title">{{ episode.name }}</h4>
+                                    <p class="episode-info">Episode {{ episode.number }}</p>
+                                    <p class="episode-info">Air Date: {{ episode.airdate }}</p>
+                                    <p class="episode-info">Rating: {{ episode.rating.average }} / 10</p>
+                                </div>
+                            {% endfor %}
+                        </div>
+                    </div>
+                {% endfor %}
+            </div>
+            
+            <!-- Embed Series -->
+            {% if serie.id %}
+                <div style="margin-bottom: 40px;">
+                    <iframe src="https://multiembed.mov/?video_id={{ serie.id }}&tmdb=1&tv=1" width="100%" height="500" frameborder="0" allowfullscreen></iframe>
+                </div>
+            {% endif %}
         {% endif %}
     </div>
     
